--- a/src/style.css
+++ b/src/style.css
@@ -38,31 +38,45 @@
 }
 
 #about {
-    display: table;
-    height: 90vh;
-}
-
-.left, .right {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .left {
-    width: 55%;
-    background-color: #F3D250;
+    float: left;
+    height: 100%;
+    width: 50%;
+    background-color: #90CCF4;
+    color: white;
+    font-weight: bold;
+    vertical-align: middle;
+    text-align: center;
+    padding-top: 5%;
 }
 
 .right {
-    width: 45%;
+    float: right;
+    height: 100%;
+    width: 50%;
     background-color: #F78888;
+    color: white;
+    vertical-align: middle;
+    text-align: center;
+    padding-top: 4%;
 }
 
 .intro {
-    font-size: 180%;
     width: 80%;
     text-align: left;
     margin-left: 10%;
+}
+
+.i_am {
+    font-size: 300%;
+}
+
+.who_i_am {
+    font-size: 200%;
 }
 
 img {
