--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@
 
 .nav-item {
     display: inline;
-    margin-left: 2rem;
+    margin: 1.5rem;
     color: #333;
 }
 
@@ -91,8 +91,9 @@ img {
 #skills {
     padding: 30px 0 30px 0;
     text-align: center;
-    color: #00887A;
+    color: #FFC6AC;
     overflow: hidden;
+    background-color: #002A32;
 }
 
 .header {
@@ -144,6 +145,7 @@ img {
     color: #00887A;
     border-radius: 15px;
     overflow: auto;
+    height: 50vh;
 }
   
 .card:hover {
@@ -163,4 +165,8 @@ img {
 .card_right {
     float: right;
     margin-right: 5%;
+}
+
+.work_deets {
+    text-align: left;
 }
