--- a/src/style.css
+++ b/src/style.css
@@ -127,13 +127,61 @@ img {
 }
 
 #experience {
+    /*
     height: 95vh;
     padding: 30px 0 30px 0;
     text-align: center;
     background-color: #41B3A3;
     color: white;
+    */
+    width: 100%;
+    height: 100vh;
 }
 
+.left_exp {
+    float: left;
+    height: 100%;
+    width: 50%;
+    background-color: #F78888;
+    color: white;
+    font-weight: bold;
+    vertical-align: middle;
+    text-align: center;
+    padding-top: 5%;
+}
+
+.right_exp {
+    float: right;
+    height: 100%;
+    width: 50%;
+    background-color: #90CCF4;
+    color: white;
+    font-weight: bold;
+    vertical-align: middle;
+    text-align: center;
+    padding-top: 4%;
+}
+
+.work {
+    font-size: 200%;
+    margin-top: 5%;
+}
+
+.ink {
+    font-size: 40%;
+    font-weight: normal;
+}
+
+.description {
+    font-size: 60%;
+    font-weight: normal;
+}
+
+.project_links {
+    color: white;
+}
+
+/*
 .worked {
     font-size: 200%;
 }
@@ -170,3 +218,4 @@ img {
 .work_deets {
     text-align: left;
 }
+*/
